--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.1",
     "nodemailer": "^6.7.5",
     "uuid": "^8.3.2"
   }
